# APIs/internal/infra/webserver/handlers/product_handler.go
@@ -23,6 +23,17 @@ func NewProductHandler(db database.ProductInterface) *ProductHandler {
 	}
 }
 
+// CreateProduct godoc
+// @Summary 		Create Product
+// @Description 	Create Product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			request 	body	dto.CreateProductInput	true	"product request"
+// @Success			201
+// @Failure			500			{object}	Error
+// @Router			/product	[post]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	var product dto.CreateProductInput
 	err := json.NewDecoder(r.Body).Decode(&product)
@@ -46,6 +57,19 @@ func (h *ProductHandler) CreateProduct(w http.ResponseWriter, r *http.Request) {
 	w.WriteHeader(http.StatusCreated)
 }
 
+// AllProducts godoc
+// @Summary 		List Products
+// @Description 	List Product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			page	query	string	false	"page number"
+// @Param 			limit	query	string 	false	"limit"
+// @Success			200			{array}		entity.Product
+// @Failure			404			{object}	Error
+// @Failure			500			{object}	Error
+// @Router			/product/all	[get]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) AllProducts(w http.ResponseWriter, r *http.Request) {
 	page := r.URL.Query().Get("page")
 	intPage, err := strconv.Atoi(page)
@@ -73,6 +97,18 @@ func (h *ProductHandler) AllProducts(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// GetProducts godoc
+// @Summary 		Get a products
+// @Description 	Get a products
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id		path 	string	true	"product ID" Format(uuid)
+// @Success			200			{object}	entity.Product
+// @Failure			404
+// @Failure			500			{object}	Error
+// @Router			/product/{id}	[get]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -91,6 +127,19 @@ func (h *ProductHandler) GetProduct(w http.ResponseWriter, r *http.Request) {
 	json.NewEncoder(w).Encode(product)
 }
 
+// UpdateProduct godoc
+// @Summary 		Update a  product
+// @Description 	Update a product
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id		path 	string	true	"product ID" Format(uuid)
+// @Param 			request 	body	dto.CreateProductInput	true	"product request"
+// @Success			200
+// @Failure			404
+// @Failure			500			{object}	Error
+// @Router			/product/{id}	[put]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
@@ -126,6 +175,18 @@ func (h *ProductHandler) UpdateProduct(w http.ResponseWriter, r *http.Request) {
 
 }
 
+// DeleteProducts godoc
+// @Summary 		Delete a product
+// @Description 	Delete a products
+// @Tags 			products
+// @Accept 			json
+// @Produce 		json
+// @Param 			id		path 	string	true	"product ID" Format(uuid)
+// @Success			200
+// @Failure			404
+// @Failure			500			{object}	Error
+// @Router			/product/{id}	[delete]
+// @Security 		ApiKeyAuth
 func (h *ProductHandler) DeleteProduct(w http.ResponseWriter, r *http.Request) {
 	id := chi.URLParam(r, "id")
 	if id == "" {
